--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
 </head>
 <body>
   <div id="mainCircle">
-      <h1>Simon Chalange</h1>
+      <h1><span>The Simon Chalange - The Perfect Computer Copy Cat</span></h1>
       <div id="outer-circle">
         <div class="green-box">
         <div id="green-box">
-        <button class="green button">Green button!</button>
         </div>
         <div class="red-box">
           <div id="red-box">
@@ -24,7 +23,8 @@
               <div id="blue-box">
         </div>
                 <div id="inner-circle">
-                  <button class="start button">Start Game!</button>
+                  <button id="start-button">Start Game!</button>
+                  <button id="restart-button"> Restart!</button>
               </div>
             </div>
           </div>
